--- a/HIMS_pilot1to3oct2019.ipynb
+++ b/HIMS_pilot1to3oct2019.ipynb
@@ -1464,14 +1464,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 297
+          "height": 444
         },
-        "outputId": "e01cc4e8-761c-4ecc-c3c0-8595447bd770"
+        "outputId": "52a12b29-7da9-450a-c548-3cd1f3949175"
       },
       "source": [
-        "all_data.describe()"
+        "all_data.describe(include=\"all\")"
       ],
-      "execution_count": 98,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1496,10 +1496,20 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>FacilityCode</th>\n",
+              "      <th>FacilityName</th>\n",
+              "      <th>FTypeShort</th>\n",
+              "      <th>FtypeCat</th>\n",
+              "      <th>CityName</th>\n",
               "      <th>VisitCode</th>\n",
+              "      <th>OrderID</th>\n",
               "      <th>PatCode</th>\n",
+              "      <th>GENDER</th>\n",
               "      <th>Age</th>\n",
               "      <th>ServiceCode</th>\n",
+              "      <th>ServiceName</th>\n",
+              "      <th>ItemName</th>\n",
+              "      <th>Result</th>\n",
+              "      <th>AbnormalFlag</th>\n",
               "      <th>mdate</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -1507,73 +1517,210 @@
               "    <tr>\n",
               "      <th>count</th>\n",
               "      <td>1077615.000000</td>\n",
+              "      <td>1077615</td>\n",
+              "      <td>1077615</td>\n",
+              "      <td>1077615</td>\n",
+              "      <td>1077615</td>\n",
+              "      <td>1077615.000000</td>\n",
+              "      <td>1077615</td>\n",
+              "      <td>1077615.000000</td>\n",
+              "      <td>1077615</td>\n",
               "      <td>1077615.000000</td>\n",
               "      <td>1077615.000000</td>\n",
+              "      <td>1077615</td>\n",
+              "      <td>1077615</td>\n",
+              "      <td>1010161.000000</td>\n",
+              "      <td>1077615</td>\n",
               "      <td>1077615.000000</td>\n",
-              "      <td>1077615.000000</td>\n",
-              "      <td>1077615.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>unique</th>\n",
+              "      <td>nan</td>\n",
+              "      <td>2476</td>\n",
+              "      <td>11</td>\n",
+              "      <td>3</td>\n",
+              "      <td>35</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>79459</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>3</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>102</td>\n",
+              "      <td>230</td>\n",
+              "      <td>13977.000000</td>\n",
+              "      <td>4</td>\n",
+              "      <td>nan</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>top</th>\n",
+              "      <td>nan</td>\n",
+              "      <td>Women Hospital, Amravati</td>\n",
+              "      <td>PHC</td>\n",
+              "      <td>PHC</td>\n",
+              "      <td>Nashik</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>29S00190010288</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>F</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>Complete blood count</td>\n",
+              "      <td>Platelet Count</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>N</td>\n",
+              "      <td>nan</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>freq</th>\n",
+              "      <td>nan</td>\n",
+              "      <td>6681</td>\n",
+              "      <td>530881</td>\n",
+              "      <td>648316</td>\n",
+              "      <td>72497</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>103</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>653243</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>826488</td>\n",
+              "      <td>59081</td>\n",
+              "      <td>50163.000000</td>\n",
+              "      <td>851863</td>\n",
+              "      <td>nan</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>mean</th>\n",
               "      <td>1353.409223</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>3581550024.162685</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>3929355141.320170</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>31.862257</td>\n",
               "      <td>1420.965320</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>1.995615</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>std</th>\n",
               "      <td>822.200506</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>3395855631.416872</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>3412825203.302676</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>17.463918</td>\n",
               "      <td>548.094703</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>0.984273</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>min</th>\n",
               "      <td>1.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>125198732.000000</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>125198740.000000</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>1.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>1.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>25%</th>\n",
               "      <td>691.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>881926207.000000</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>1121962039.000000</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>20.000000</td>\n",
               "      <td>1638.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>1.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>50%</th>\n",
               "      <td>1310.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>2019112295.000000</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>2719327357.000000</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>28.000000</td>\n",
               "      <td>1638.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>2.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>75%</th>\n",
               "      <td>2019.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>5419279683.000000</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>5919127386.500000</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>42.000000</td>\n",
               "      <td>1638.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>3.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>max</th>\n",
               "      <td>2997.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>12119150148.000000</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>12119174375.000000</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>100.000000</td>\n",
               "      <td>1709.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>3.000000</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -1581,32 +1728,79 @@
               "</div>"
             ],
             "text/plain": [
-              "        FacilityCode          VisitCode            PatCode            Age  \\\n",
-              "count 1077615.000000     1077615.000000     1077615.000000 1077615.000000   \n",
-              "mean     1353.409223  3581550024.162685  3929355141.320170      31.862257   \n",
-              "std       822.200506  3395855631.416872  3412825203.302676      17.463918   \n",
-              "min         1.000000   125198732.000000   125198740.000000       0.000000   \n",
-              "25%       691.000000   881926207.000000  1121962039.000000      20.000000   \n",
-              "50%      1310.000000  2019112295.000000  2719327357.000000      28.000000   \n",
-              "75%      2019.000000  5419279683.000000  5919127386.500000      42.000000   \n",
-              "max      2997.000000 12119150148.000000 12119174375.000000     100.000000   \n",
+              "         FacilityCode              FacilityName FTypeShort FtypeCat CityName  \\\n",
+              "count  1077615.000000                   1077615    1077615  1077615  1077615   \n",
+              "unique            nan                      2476         11        3       35   \n",
+              "top               nan  Women Hospital, Amravati        PHC      PHC   Nashik   \n",
+              "freq              nan                      6681     530881   648316    72497   \n",
+              "mean      1353.409223                       NaN        NaN      NaN      NaN   \n",
+              "std        822.200506                       NaN        NaN      NaN      NaN   \n",
+              "min          1.000000                       NaN        NaN      NaN      NaN   \n",
+              "25%        691.000000                       NaN        NaN      NaN      NaN   \n",
+              "50%       1310.000000                       NaN        NaN      NaN      NaN   \n",
+              "75%       2019.000000                       NaN        NaN      NaN      NaN   \n",
+              "max       2997.000000                       NaN        NaN      NaN      NaN   \n",
               "\n",
-              "         ServiceCode          mdate  \n",
-              "count 1077615.000000 1077615.000000  \n",
-              "mean     1420.965320       1.995615  \n",
-              "std       548.094703       0.984273  \n",
-              "min         1.000000       1.000000  \n",
-              "25%      1638.000000       1.000000  \n",
-              "50%      1638.000000       2.000000  \n",
-              "75%      1638.000000       3.000000  \n",
-              "max      1709.000000       3.000000  "
+              "                VisitCode         OrderID            PatCode   GENDER  \\\n",
+              "count      1077615.000000         1077615     1077615.000000  1077615   \n",
+              "unique                nan           79459                nan        3   \n",
+              "top                   nan  29S00190010288                nan        F   \n",
+              "freq                  nan             103                nan   653243   \n",
+              "mean    3581550024.162685             NaN  3929355141.320170      NaN   \n",
+              "std     3395855631.416872             NaN  3412825203.302676      NaN   \n",
+              "min      125198732.000000             NaN   125198740.000000      NaN   \n",
+              "25%      881926207.000000             NaN  1121962039.000000      NaN   \n",
+              "50%     2019112295.000000             NaN  2719327357.000000      NaN   \n",
+              "75%     5419279683.000000             NaN  5919127386.500000      NaN   \n",
+              "max    12119150148.000000             NaN 12119174375.000000      NaN   \n",
+              "\n",
+              "                  Age    ServiceCode           ServiceName        ItemName  \\\n",
+              "count  1077615.000000 1077615.000000               1077615         1077615   \n",
+              "unique            nan            nan                   102             230   \n",
+              "top               nan            nan  Complete blood count  Platelet Count   \n",
+              "freq              nan            nan                826488           59081   \n",
+              "mean        31.862257    1420.965320                   NaN             NaN   \n",
+              "std         17.463918     548.094703                   NaN             NaN   \n",
+              "min          0.000000       1.000000                   NaN             NaN   \n",
+              "25%         20.000000    1638.000000                   NaN             NaN   \n",
+              "50%         28.000000    1638.000000                   NaN             NaN   \n",
+              "75%         42.000000    1638.000000                   NaN             NaN   \n",
+              "max        100.000000    1709.000000                   NaN             NaN   \n",
+              "\n",
+              "               Result AbnormalFlag          mdate  \n",
+              "count  1010161.000000      1077615 1077615.000000  \n",
+              "unique   13977.000000            4            nan  \n",
+              "top          0.000000            N            nan  \n",
+              "freq     50163.000000       851863            nan  \n",
+              "mean              nan          NaN       1.995615  \n",
+              "std               nan          NaN       0.984273  \n",
+              "min               nan          NaN       1.000000  \n",
+              "25%               nan          NaN       1.000000  \n",
+              "50%               nan          NaN       2.000000  \n",
+              "75%               nan          NaN       3.000000  \n",
+              "max               nan          NaN       3.000000  "
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 98
+          "execution_count": 102
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qTZ9J1OQU3Ja",
+        "colab_type": "text"
+      },
+      "source": [
+        "1. In a given data 25% of Patient's Age is below 20\n",
+        "2. In a given dat 50% of Patient 's Age is below 28\n",
+        "3. Average Age in Given Data is 28 Years\n",
+        "4. Mean of Age in Given Data is 32 Years(31.8 Years). Average age of Patient is 32 Years\n",
+        "5. Minimum Age in given data is 0 Years\n",
+        "6. Maximum Age in Given data is 100 Years"
       ]
     },
     {
@@ -5730,7 +5924,7 @@
       "metadata": {
         "id": "ZbCY_EsW8F1a",
         "colab_type": "code",
-        "outputId": "c2b04e3b-1bec-43c5-f49a-df9804e2a64d",
+        "outputId": "35b8410f-cd20-41aa-9ad7-18870f447e43",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
@@ -5739,7 +5933,7 @@
       "source": [
         "all_data.groupby(['CityName','FacilityName'])['FacilityName'].count()"
       ],
-      "execution_count": 0,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5763,7 +5957,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 101
         }
       ]
     },
